--------------------------------------------------------------------------------
drkns 2025-07-16 22:55:03+01:00 - build 6515

1. Fix editor strings positioning with tabs beyond left border.

2. Optimize real <-> visual pos calculation in corner cases.

--------------------------------------------------------------------------------
drkns 2025-07-14 17:47:41+01:00 - build 6514

1. Correction of 6510.2 & tests.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2025-07-14 08:42:32+01:00 - build 6513

1. Correction of 6510.2.

--------------------------------------------------------------------------------
drkns 2025-07-12 16:21:37+01:00 - build 6512

1. Correction of 6510.1 for 2k.

--------------------------------------------------------------------------------
drkns 2025-07-11 20:56:32+01:00 - build 6511

1. gh-979: Ensure that timers are destroyed consistently.

--------------------------------------------------------------------------------
drkns 2025-07-11 01:57:59+01:00 - build 6510

1. Continue 6505.1.
   Rework messages on encoding errors.
   Show Unicode character names where needed.

2. Improve UTF-8 decoding.
   Unpaired surrogates are now decoded as separate bytes.
   Editing arbitrary data should be round-trip safe.

--------------------------------------------------------------------------------
drkns 2025-07-08 23:38:52+01:00 - build 6509

1. Expose the error lookup dialog (F3 in warning messages) via command line - far:error.

2. Fix clock redraw within command line session.

3. Refactoring.

--------------------------------------------------------------------------------
shmuel 2025-07-08 22:35:08+03:00 - build 6508

1. Correction to 6507.

--------------------------------------------------------------------------------
shmuel 2025-07-08 10:57:47+03:00 - build 6507

1. Refactoring.

--------------------------------------------------------------------------------